Worked ahead chocolate notebook added citations with examples

--- a/SearchGemini_Citations.ipynb
+++ b/SearchGemini_Citations.ipynb
@@ -1451,7 +1451,16 @@
         "# citations start from 1 for better UI\n",
         "for i, (_, row) in enumerate(df_with_summary.iterrows()):\n",
         "    summary_stuff += f'{i+1} {row[\"category\"]}\\t{row[\"summary\"]}\\n'\n",
-        "print(summary_stuff)"
+        "print(summary_stuff)\n",
+        "\n",
+        "# Output:\n",
+        "'''1 Neutral\tThis aids in proper digestion by converting the carbohydrates into simple sugars that are released. Your child’s diet should include iron, folic acid, vitamin B12 and copper in sufficient quantity for the formation of red blood cells. A banana is enriched enough with all of these nutrients and helps in producing hemoglobin.\n",
+        "2 Neutral\tHyperkalemia usually happens in people with kidney disease or who are taking certain medications, like diuretics, that affect the way our bodies process potassium. It's no wonder you see them as a flavoring in many packaged toddler snacks, from puffs to other finger foods. When buying bananas, select fruits that are fully yellow in color and separate easily from each other at the stem—both indications of ripeness.\n",
+        "3 Neutral\tIf allowed to mature, the skin will yellow and develop a slightly sweet flavor that may be eaten raw or cooked. Squeeze a bit of acid like apple cider vinegar, orange juice, lime, or lemon onto the bananas to prevent darkening too quickly. Pereira A, Maraschin M. Banana (Musa spp) from peel to pulp: ethnopharmacology, source of bioactive compounds and its relevance for human health.\n",
+        "4 Neutral\tBananas contain essential nutrients that may enhance heart health, help manage blood pressure, and boost a person’s mood, among other benefits. In 2004, researchers noted that children who consumed bananas, orange juice, or both appeared to have a lower risk of developing leukemia. High fiber foods can trigger bloating, gas, and stomach cramps in people with inflammatory bowel disease (IBD), according to a 2012 study.\n",
+        "5 Neutral\tSome people may be put off by physical activity, especially if they haven’t been active for a while or got hurt and are afraid of getting injured again. Eating healthy foods may seem hard when you don’t have time to cook or are on a tight budget. If you don’t feel comfortable cooking, try something easy, like combining your favorite fresh, frozen, or canned veggies to make a stir-fry.\n",
+        "6 Neutral\tThe effect of fruit and vegetable intake on risk for coronary heart disease. A national study of the association between food environments and county‐level health outcomes. Initial findings from the National Household Food Acquisition and Purchase Survey.\n",
+        "7 Neutral\tHe also explained that there is no med'''"
       ]
     },
     {
@@ -1469,7 +1478,19 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "final_response.text"
+        "final_response.text\n",
+        "\n",
+        "# Ouput:\n",
+        "'''Yes, bananas are a nutritious fruit that offers numerous benefits for children. \n",
+        "[1, 14, 28] They are rich in essential nutrients such as potassium, vitamin B6, and \n",
+        "fiber, which are vital for overall health and development. [1, 4, 14, 28] Consuming\n",
+        " bananas has been linked to improved heart health, better blood pressure management, \n",
+        " and enhanced mood. [4, 14, 28] Additionally, bananas are a good source of prebiotics, \n",
+        " which aid in proper digestion and support a healthy immune system. [1] However, it's \n",
+        " important to note that some individuals may experience allergic reactions to bananas, \n",
+        " including symptoms such as skin irritation, rash, and digestive issues. [22, 24] \n",
+        " If your child exhibits any adverse reactions after consuming bananas, it's advisable \n",
+        " to consult a healthcare professional for guidance. [22, 23]'''"
       ]
     },
     {
@@ -1482,7 +1503,10 @@
         "import re\n",
         "numbers = [x - 1 for x in [int(x) for sublist in [re.findall(r'\\d+', x) for x in re.findall(r'\\[(\\d+(?:,\\s*\\d+)*)]', final_response.text)] for x in sublist]]\n",
         "# citations start from 0 instead of 1\n",
-        "print(list(set(numbers)))\n"
+        "print(list(set(numbers)))\n",
+        "\n",
+        "# Output:\n",
+        "# [0, 3, 13, 21, 22, 23, 27]"
       ]
     }
   ],
