HTML embedded Citations

--- a/SearchGemini_Citations.ipynb
+++ b/SearchGemini_Citations.ipynb
@@ -1508,6 +1508,85 @@
         "# Output:\n",
         "# [0, 3, 13, 21, 22, 23, 27]"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Embedd HTML Citations\n",
+        "\n",
+        "sentence = final_response.text\n",
+        "for link in [x+1 for x in numbers]:\n",
+        "    sentence = sentence.replace(\"[\" + str(link) + \"]\", \"[<a href='{}'>{}</a>]\".format(df_with_summary['link'][link-1], link))\n",
+        "    sentence = sentence.replace(\", \" + str(link) + \",\", \", <a href='{}'>{}</a>,\".format(df_with_summary['link'][link-1], link))\n",
+        "    sentence = sentence.replace(\"[\" + str(link) + \",\", \"[<a href='{}'>{}</a>,\".format(df_with_summary['link'][link-1], link))\n",
+        "    sentence = sentence.replace(\", \" + str(link) + \"]\", \", <a href='{}'>{}</a>]\".format(df_with_summary['link'][link-1], link))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# text without embedded html\n",
+        "final_response.text\n",
+        "\n",
+        "# Output:\n",
+        "'''Yes, bananas are a nutritious fruit that offers numerous benefits \n",
+        "for children. [1, 14, 28] They are rich in essential nutrients such \n",
+        "as potassium, vitamin B6, and fiber, which are vital for overall health \n",
+        "and development. [1, 4, 14, 28] Consuming bananas has been linked to \n",
+        "improved heart health, better blood pressure management, and enhanced \n",
+        "mood. [4, 14, 28] Additionally, bananas are a good source of prebiotics, \n",
+        "which aid in proper digestion and support a healthy immune system. [1] \n",
+        "However, it's important to note that some individuals may experience \n",
+        "allergic reactions to bananas, including symptoms such as skin \n",
+        "irritation, rash, and digestive issues. [22, 24] If your child exhibits \n",
+        "any adverse reactions after consuming bananas, it's advisable to consult \n",
+        "a healthcare professional for guidance. [22, 23]'''"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# text without embedded html\n",
+        "sentence\n",
+        "\n",
+        "# Output:\n",
+        "'''Yes, bananas are a nutritious fruit that offers numerous benefits for \n",
+        "children. [<a href='https://www.nourishhanalei.com/blog/5-health-benefits-of-bananas-for-kids'>1</a>, \n",
+        "<a href='https://www.medicalnewstoday.com/articles/271157'>14</a>, \n",
+        "<a href='https://www.medicalnewstoday.com/articles/271157'>28</a>] \n",
+        "They are rich in essential nutrients such as potassium, vitamin B6, and \n",
+        "fiber, which are vital for overall health and development. \n",
+        "[<a href='https://www.nourishhanalei.com/blog/5-health-benefits-of-bananas-for-kids'>1</a>, \n",
+        "<a href='https://www.medicalnewstoday.com/articles/271157'>4</a>, \n",
+        "<a href='https://www.medicalnewstoday.com/articles/271157'>14</a>, \n",
+        "<a href='https://www.medicalnewstoday.com/articles/271157'>28</a>] \n",
+        "Consuming bananas has been linked to improved heart health, better blood \n",
+        "pressure management, and enhanced mood. \n",
+        "[<a href='https://www.medicalnewstoday.com/articles/271157'>4</a>, \n",
+        "<a href='https://www.medicalnewstoday.com/articles/271157'>14</a>, \n",
+        "<a href='https://www.medicalnewstoday.com/articles/271157'>28</a>] \n",
+        "Additionally, bananas are a good source of prebiotics, which aid in proper \n",
+        "digestion and support a healthy immune system. \n",
+        "[<a href='https://www.nourishhanalei.com/blog/5-health-benefits-of-bananas-for-kids'>1</a>] \n",
+        "However, it's important to note that some individuals may experience \n",
+        "allergic reactions to bananas, including symptoms such as skin \n",
+        "irritation, rash, and digestive issues. \n",
+        "[<a href='https://www.medicalnewstoday.com/articles/319968'>22</a>, \n",
+        "<a href='https://familymedicineaustin.com/banana-allergy-symptoms-and-risk-factors/'>24</a>] \n",
+        "If your child exhibits any adverse reactions after consuming bananas, \n",
+        "it's advisable to consult a healthcare professional for guidance. \n",
+        "[<a href='https://www.medicalnewstoday.com/articles/319968'>22</a>, \n",
+        "<a href='https://www.healthline.com/health/banana-allergy'>23</a>]'''"
+      ]
     }
   ],
   "metadata": {
