--- a/Chocolate_SearchGemini_integration.ipynb
+++ b/Chocolate_SearchGemini_integration.ipynb
@@ -100,9 +100,9 @@
       "cell_type": "code",
       "source": [
         "# API keys\n",
-        "GEMINI_API_KEY = \"AIzaSyB8S2mzKjNLtWRdTVi7FAkeld5eXo1bpGE\"\n",
-        "SEARCH_API_KEY = 'AIzaSyAREEAMxi9KoVhG-yeE2JM8puR6WCAE--k'\n",
-        "CX = '70aad34f181724ec4'\n",
+        "GEMINI_API_KEY = \"YOUR_GEMINI_API_KEY\"\n",
+        "SEARCH_API_KEY = 'YOUR_CUSTOM_SEARCH_ENGINE_API_KEY'\n",
+        "CX = 'YOUR_SEARCH_ENGINE_ID'\n",
         "NUM = 50\n",
         "\n",
         "genai.configure(api_key=GEMINI_API_KEY)"
