--- a/SearchGemini_Citations.ipynb
+++ b/SearchGemini_Citations.ipynb
@@ -109,9 +109,9 @@
       "outputs": [],
       "source": [
         "# API keys\n",
-        "GOOGLE_API_KEY = \"AIzaSyB8S2mzKjNLtWRdTVi7FAkeld5eXo1bpGE\"\n",
-        "API_KEY = 'AIzaSyCZ2z9E7DFGGIKBUW4X7AaANHXaBEE6V_M'\n",
-        "CX = 'c1805c89867d149c3'\n",
+        "GOOGLE_API_KEY = \"YOUR_GEMINI_API_KEY\"\n",
+        "API_KEY = 'YOUR_CUSTOM_SEARCH_ENGINE_API_KEY'\n",
+        "CX = 'YOUR_SEARCH_ENGINE_ID'\n",
         "NUM = 3\n",
         "\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
