--- a/gemini_basics.ipynb
+++ b/gemini_basics.ipynb
@@ -39,7 +39,7 @@
     {
       "cell_type": "code",
       "source": [
-        "GOOGLE_API_KEY = \"AIzaSyB8S2mzKjNLtWRdTVi7FAkeld5eXo1bpGE\"\n",
+        "GOOGLE_API_KEY = \"YOUR_GEMINI_API_KEY\"\n",
         "\n",
         "genai.configure(api_key=GOOGLE_API_KEY)"
       ],
@@ -204,8 +204,8 @@
         "import requests\n",
         "\n",
         "# API key\n",
-        "API_KEY = 'AIzaSyCZ2z9E7DFGGIKBUW4X7AaANHXaBEE6V_M'\n",
-        "CX = 'c1805c89867d149c3'\n",
+        "API_KEY = 'YOUR_CUSTOM_SEARCH_ENGINE_API_KEY'\n",
+        "CX = 'YOUR_SEARCH_ENGINE_ID'\n",
         "\n",
         "def google_search(query):\n",
         "    # Base URL for Google Custom Search API\n",
